--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -360,8 +360,8 @@
 						{
 							añadirMargin = "margin-top: 15px;";
 
-							<div style="text-align: left; display: flex; align-items: center;">
-								<img src="@datosExpandidos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 10px;" />
+							<div style="text-align: left; display: flex; align-items: center; gap: 10px;">
+								<img src="@datosExpandidos.ReviewsIcono" style="width: 20px; height: 20px;" />
 								<label>@datosExpandidos.ReviewsCantidad</label>
 							</div>
 						}
