--- a/pepeizqs deals web/Pages/Free.cshtml
+++ b/pepeizqs deals web/Pages/Free.cshtml
@@ -2,7 +2,7 @@
 @model pepeizqs_deals_web.Pages.FreeModel
 
 @{
-    string titulo = Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.Title");
+    string titulo = Herramientas.Idiomas.CogerCadena(Model.idioma, "Title", "Free");
 
     ViewData["Title"] = titulo;
     Layout = "/Pages/Shared/_Layout.cshtml";
@@ -47,61 +47,61 @@
             {
                 if (dlcs == 1)
                 {
-                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String6"), dlcs.ToString()) + " " + Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String8");
+                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String6", "Free"), dlcs.ToString()) + " " + Herramientas.Idiomas.CogerCadena(Model.idioma, "String8", "Free");
                 }
                 else if (dlcs > 1)
                 {
-                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String7"), dlcs.ToString()) + " " + Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String9");
+                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String7", "Free"), dlcs.ToString()) + " " + Herramientas.Idiomas.CogerCadena(Model.idioma, "String9", "Free");
                 }
             }
             else if (juegos > 0)
             {
                 if (juegos == 1 && dlcs == 0)
                 {
-                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String3"), juegos.ToString()) + " " + Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String8");
+                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String3", "Free"), juegos.ToString()) + " " + Herramientas.Idiomas.CogerCadena(Model.idioma, "String8", "Free");
                 }
                 else if (juegos > 1 && dlcs == 0)
                 {
-                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String4"), juegos.ToString()) + " " + Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String9");
+                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String4", "Free"), juegos.ToString()) + " " + Herramientas.Idiomas.CogerCadena(Model.idioma, "String9", "Free");
                 }
                 else if (juegos == 1 && dlcs == 1)
                 {
-                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String3"), juegos.ToString()) + " " +
-                        Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String5") + " " +
-                        string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String6"), dlcs.ToString()) + " " +
-                        Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String9");
+                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String3", "Free"), juegos.ToString()) + " " +
+                        Herramientas.Idiomas.CogerCadena(Model.idioma, "String5", "Free") + " " +
+                        string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String6", "Free"), dlcs.ToString()) + " " +
+                        Herramientas.Idiomas.CogerCadena(Model.idioma, "String9", "Free");
                 }
                 else if (juegos > 1 && dlcs == 1)
                 {
-                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String4"), juegos.ToString()) + " " +
-                        Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String5") + " " +
-                        string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String6"), dlcs.ToString()) + " " +
-                        Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String9");
+                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String4", "Free"), juegos.ToString()) + " " +
+                        Herramientas.Idiomas.CogerCadena(Model.idioma, "String5", "Free") + " " +
+                        string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String6", "Free"), dlcs.ToString()) + " " +
+                        Herramientas.Idiomas.CogerCadena(Model.idioma, "String9", "Free");
                 }
                 else if (juegos == 1 && dlcs > 1)
                 {
-                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String3"), juegos.ToString()) + " " +
-                        Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String5") + " " +
-                        string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String7"), dlcs.ToString()) + " " +
-                        Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String9");
+                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String3", "Free"), juegos.ToString()) + " " +
+                        Herramientas.Idiomas.CogerCadena(Model.idioma, "String5", "Free") + " " +
+                        string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String7", "Free"), dlcs.ToString()) + " " +
+                        Herramientas.Idiomas.CogerCadena(Model.idioma, "String9", "Free");
                 }
                 else if (juegos > 1 && dlcs > 1)
                 {
-                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String4"), juegos.ToString()) + " " +
-                        Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String5") + " " +
-                        string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String7"), dlcs.ToString()) + " " +
-                        Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String9");
+                    titulo = string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String4", "Free"), juegos.ToString()) + " " +
+                        Herramientas.Idiomas.CogerCadena(Model.idioma, "String5", "Free") + " " +
+                        string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String7", "Free"), dlcs.ToString()) + " " +
+                        Herramientas.Idiomas.CogerCadena(Model.idioma, "String9", "Free");
                 }
             }
 
             if (string.IsNullOrEmpty(titulo) == true)
             {
-                titulo = Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String10");
+                titulo = Herramientas.Idiomas.CogerCadena(Model.idioma, "String10", "Free");
             }
         }
     }
 
-    string descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "Free.String11");
+    string descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "String11", "Free");
 
     string enlace = "https://pepeizqdeals.com/free/";
 }
