--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -21,12 +21,12 @@
 @if (juegosActuales.Count > 0)
 {
 	<h1 style="font-size: 23px;">
-		@Herramientas.Idiomas.CogerCadena(idioma, "Free.String1")
+		@Herramientas.Idiomas.CogerCadena(idioma, "String1", "Free")
 	</h1>
 
     <hr>
 
-    <div class="perfil" style="padding: 0px; background-color: transparent;">
+    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 40px; justify-items: center;">
         @foreach (var juego in juegosActuales)
         {
             bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
@@ -58,128 +58,79 @@
             Herramientas.ToolTipDatos tooltipDatos = Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado);
 
             <div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()-@juego.Tipo.ToString()')">
-                <div id="tooltip-@juego.JuegoId.ToString()-@juego.Tipo.ToString()" class="tooltip-relleno">
+                <div id="tooltip-@juego.JuegoId.ToString()-@juego.Tipo.ToString()" class="tooltip-relleno" style="max-width: 460px;">
                     @if (string.IsNullOrEmpty(tooltipDatos.Video) == false)
                     {
-                        <video src="@tooltipDatos.Video" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
+                        <video src="@tooltipDatos.Video" autoplay="autoplay" loop muted style="object-fit: cover; width: 100%;" />
                     }
 
-                    <div style="padding: 15px; text-align: center;">
-                        <div style="text-align: center; max-width: 430px;">
+                    <div style="padding: 15px;">
+                        <div style="text-align: left;">
                             @tooltipDatos.Nombre
                         </div>
 
                         @if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
                         {
-                            <div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
-                                <img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" alt="Reviews"/>
+                            <hr />
+
+                            <div style="display: flex; align-items: center; gap: 15px;">
+                                <img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px;" alt="Reviews" />
                                 <label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
                             </div>
                         }
 
                         @if (string.IsNullOrEmpty(tooltipDatos.UsuarioMensaje) == false)
                         {
-                            <div style="text-align: center;">
+                            <hr />
+
+                            <div style="text-align: left;">
                                 @tooltipDatos.UsuarioMensaje
                             </div>
+                        }
+
+
+                        @{
+                            int gratisEstado = 0;
+
+                            if (juego.Juego.Gratis != null)
+                            {
+                                gratisEstado = juego.Juego.Gratis.Count;
+
+                                if (gratisEstado > 0)
+                                {
+                                    gratisEstado -= 1;
+                                }
+                            }
+
+                            if (gratisEstado > 0)
+                            {
+                                <hr />
+
+                                <div style="text-align: left;">
+                                    @Herramientas.Idiomas.CogerCadena(idioma, "String12", "Free")
+                                </div>
+                            }
                         }
                     </div>
                 </div>
 
                 <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 0px; text-align: center; margin-bottom: 20px; position: relative; @fondoColor" target="_blank">
-                    <div style="display: flex; align-items: center; padding: 2px 15px 2px 2px;">
-                        <div style="text-align: center; width: 19%;">
-                            <img src="@juego.Imagen" style="width: 100%; height: 100%;" alt="@juego.Nombre"/>
-                        </div>
+                    <div style="width: 100%; text-align: center; padding: 5px;">
+                        <img src="@juego.Imagen" style="max-width: 100%; height: 100%;" alt="@juego.Nombre" />
 
-                        <div style="padding-left: 20px; padding-right: 20px; text-align: left; width: 60%;">
-                            <div style="margin-bottom: 10px; font-size: 17px;">
-                                @juego.Nombre
-                            </div>
-
-                            <div style="display: flex; align-items: center;">
-                                @{
-                                    Gratis2.Gratis gratis = Gratis2.GratisCargar.DevolverGratis(juego.Tipo);
-
-                                    <div>
-                                        <img src="@gratis.ImagenIcono" style="width: 20px; height: 20px;" alt="Store"/>
-                                    </div>
-
-                                    if (gratis.DRMEnseñar == true)
-                                    {
-                                        <div style="margin-left: 15px;">
-                                            <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" alt="DRM"/>
-                                        </div>
-                                    }
-
-                                    if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
-                                    {
-                                        <div style="margin-left: 15px; font-size: 14px; background: var(--fondoDlc);">
-                                            <span style="padding: 4px 6px; line-height: 24px; vertical-align: middle;">@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String15")</span>
-                                        </div>
-                                    }
-                                }
-                            </div>
-                        </div>
-
-                        <div style="margin-left: auto; margin-right: 5px; display: flex; align-items: center;">
+                        <div style="margin-top: 10px; margin-bottom: 5px; text-align: center; padding: 5px;">
                             @{
-                                int bundlesEstado = 0;
-
-                                if (juego.Juego.Bundles != null)
-                                {
-                                    bundlesEstado = juego.Juego.Bundles.Count;
-                                }
-
-                                <div style="padding-left: 20px; text-align: center;">
-                                    <div style="margin-bottom: 5px;">
-                                        @Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String10")
-                                    </div>
-
-                                    <div>
-                                        @bundlesEstado
-                                    </div>
-                                </div>
-
-                                int gratisEstado = 0;
-
-                                if (juego.Juego.Gratis != null)
-                                {
-                                    gratisEstado = juego.Juego.Gratis.Count;
-
-                                    if (gratisEstado > 0)
-                                    {
-                                        gratisEstado -= 1;
-                                    }
-                                }
-
-                                <div style="padding-left: 20px; text-align: center;">
-                                    <div style="margin-bottom: 5px;">
-                                        @Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String11")
-                                    </div>
-
-                                    <div>
-                                        @gratisEstado
-                                    </div>
-                                </div>
-
-                                int suscripcionesEstado = 0;
-
-                                if (juego.Juego.Suscripciones != null)
-                                {
-                                    suscripcionesEstado = juego.Juego.Suscripciones.Count;
-                                }
-
-                                <div style="padding-left: 20px; text-align: center;">
-                                    <div style="margin-bottom: 5px;">
-                                        @Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String12")
-                                    </div>
-
-                                    <div>
-                                        @suscripcionesEstado
-                                    </div>
-                                </div>
+                                Gratis2.Gratis gratis = Gratis2.GratisCargar.DevolverGratis(juego.Tipo);
                             }
+
+                            <div style="display: flex; align-items: center; justify-content: center; gap: 20px;">
+                                <img src="@gratis.ImagenLogo" style="max-width: 140px; max-width: 140px;" alt="Store" />
+
+                                @if (gratis.DRMEnseñar == true)
+                                {
+                                    <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 28px; height: 28px;" alt="DRM" />
+                                }
+                            </div>                            
                         </div>
                     </div>
                 </a>
@@ -189,7 +140,7 @@
 }
 
 <div style="font-size: 23px; margin-top: 60px;">
-    @Herramientas.Idiomas.CogerCadena(idioma, "Free.String2")
+    @Herramientas.Idiomas.CogerCadena(idioma, "String2", "Free")
 </div>
 
 <div style="display: flex; align-items: start; margin-top: 10px;">
