--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -2,15 +2,15 @@
 @using BaseDatos.Juegos
 @using Blazored.Video
 @using Blazored.Video.Support
-@using Juegos;
-@using Microsoft.AspNetCore.Components.Web;
+@using Juegos
+@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.Data.SqlClient
 @using Microsoft.JSInterop
-@using Microsoft.VisualBasic;
+@using Microsoft.VisualBasic
 @using Newtonsoft.Json
-@using Noticias;
+@using Noticias
 @using pepeizqs_deals_web.Areas.Identity.Data
 
 @inject UserManager<Usuario> UserManager
