--- a/pepeizqs deals web/Pages/bundle.cshtml
+++ b/pepeizqs deals web/Pages/bundle.cshtml
@@ -45,11 +45,11 @@
 
 		if (Model.bundle.Pick == false)
 		{
-			descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "Bundles.String22") + " " + precio;
+			descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "String22", "Bundle") + " " + precio;
 		}
 		else
 		{
-			descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "Bundles.String23") + " " + precio;
+			descripcion = Herramientas.Idiomas.CogerCadena(Model.idioma, "String23", "Bundle") + " " + precio;
 		}		
 	}
 
