--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -25,7 +25,7 @@
 	@if (mostrarBundleSeleccionado == false)
 	{
 		<h1 style="font-size: 23px;">
-			@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String1")
+			@Herramientas.Idiomas.CogerCadena(idioma, "String1", "Bundle")
 		</h1>
 
 		<hr>
@@ -57,7 +57,7 @@
 		@if (bundleSeleccionado != null)
 		{
 			<div style="margin-bottom: 40px; position: -webkit-sticky; position: sticky; top: 70px; z-index: 3; overflow: hidden;">
-				<div class="perfil" style="padding: 20px 30px; display: flex; align-items: center; flex-direction: row;">
+				<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px 30px; display: flex; align-items: center; flex-direction: row;">
 					<button @onclick="@(e => CerrarBundle(e))" class="boton-pequeño" style="width: auto; text-align: center; font-size: 23px; padding: 10px 20px;">
 						<i class="fa-solid fa-arrow-left"></i>
 					</button>
@@ -86,7 +86,7 @@
 				</div>
 
 				<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" class="boton-pequeño" style="text-align: center; padding: 10px 15px;" target="_blank">
-					@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String3")
+					@Herramientas.Idiomas.CogerCadena(idioma, "String3", "Bundle")
 				</a>
 			</div>		
 
@@ -98,7 +98,7 @@
 @if (mostrarBundleSeleccionado == false)
 {
 	<div id="bundles-archivo" style="font-size: 23px;">
-		@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String2")
+		@Herramientas.Idiomas.CogerCadena(idioma, "String2", "Bundle")
 	</div>
 
 	<div style="display: flex; align-items: start; margin-top: 10px;">
@@ -226,6 +226,9 @@
 	private List<string> años = new List<string>();
 	private string añoSeleccionado = string.Empty;
 
+	[CascadingParameter]
+	public HttpContext? HttpContext { get; set; }
+
 	protected override async Task OnInitializedAsync()
 	{
 		usuario = await Herramientas.UsuarioDatos.Actualizar(HttpContextAccessor.HttpContext.User, usuario, UserManager);
@@ -259,30 +262,33 @@
 		añoSeleccionado = DateTime.Now.Year.ToString();
 
 		//--------------------------------------------------------------------
-		
-		bundlesGestor = BaseDatos.Bundles.Buscar.Todos();
 
-		if (bundlesGestor.Count > 0)
+		if (HttpContext == null)
 		{
-			foreach (var bundle in bundlesGestor)
+			bundlesGestor = BaseDatos.Bundles.Buscar.Todos();
+
+			if (bundlesGestor.Count > 0)
 			{
-				if (DateTime.Now >= bundle.FechaEmpieza && DateTime.Now <= bundle.FechaTermina)
+				foreach (var bundle in bundlesGestor)
 				{
-					bundlesActuales.Add(bundle);
+					if (DateTime.Now >= bundle.FechaEmpieza && DateTime.Now <= bundle.FechaTermina)
+					{
+						bundlesActuales.Add(bundle);
+					}
+					else
+					{
+						bundlesPasados.Add(bundle);
+					}
 				}
-				else
+
+				if (bundlesActuales.Count > 0)
 				{
-					bundlesPasados.Add(bundle);
+					bundlesActuales = bundlesActuales.OrderBy(x => x.FechaTermina).ToList();
+
+					bundleSeleccionado = bundlesActuales[0];
 				}
 			}
-
-			if (bundlesActuales.Count > 0)
-			{
-				bundlesActuales = bundlesActuales.OrderBy(x => x.FechaTermina).ToList();
-
-				bundleSeleccionado = bundlesActuales[0];
-			}
-		}
+		}		
 	}
 
 	private void CambiarAño(MouseEventArgs e, string nuevoAño)
@@ -298,19 +304,19 @@
 
 			if (diferenciaTiempo.Days > 1)
 			{
-				return string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String4"), diferenciaTiempo.Days);
+				return string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String4", "Bundle"), diferenciaTiempo.Days);
 			}
 			else if (diferenciaTiempo.Days == 1)
 			{
-				return string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String5"), diferenciaTiempo.Days);
+				return string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String5", "Bundle"), diferenciaTiempo.Days);
 			}
 			else if (diferenciaTiempo.Days == 0 && diferenciaTiempo.Minutes > 0)
 			{
-				return string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String6"), diferenciaTiempo.Days);
+				return string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String6", "Bundle"), diferenciaTiempo.Days);
 			}
 		}
 
-		return Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String7") + " • " + fechaEmpieza.Day.ToString() + "/" + fechaEmpieza.Month.ToString() + "/" + fechaEmpieza.Year.ToString() + " • " + fechaTermina.Day.ToString() + "/" + fechaTermina.Month.ToString() + "/" + fechaTermina.Year.ToString();
+		return Herramientas.Idiomas.CogerCadena(idioma, "String7", "Bundle") + " • " + fechaEmpieza.Day.ToString() + "/" + fechaEmpieza.Month.ToString() + "/" + fechaEmpieza.Year.ToString() + " • " + fechaTermina.Day.ToString() + "/" + fechaTermina.Month.ToString() + "/" + fechaTermina.Year.ToString();
 	}
 
 	private async void SeleccionarBundle(MouseEventArgs e, Bundles2.Bundle nuevoBundle)
